--- a/caramel.html
+++ b/caramel.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
-body,h1,h2{font-family:'fantasy'}
+body,h1,h2{font-family:'Grand Stylus'}
 body, html {height: 100%}
 p {line-height: 2}
 /*.bgimg, .bgimg2 {
   .bgimg {background-image:
+
   url("/<img src="html5.gif" alt="HTML5 Icon" width="120" height="120">")}
   .bgimg2 {background-image: url("b7c49cd5df829b434a30ec8454931733.jpg")}
 
@@ -33,7 +34,7 @@ p {line-height: 2}
 884400
 994D00*/
 .w3-button {
-  font-family:blow;
+  font-family:'AnjelikaRose';
   color: #fff
 }
 
@@ -70,7 +71,7 @@ p {line-height: 2}
 
 <body style =
 "background-color:white;
-background-image: url('kttyktty.jpg');
+background-image: url("globe.gif";
 background-position: center;
 background-repeat: no-repeat;">
 
@@ -86,7 +87,7 @@ background-repeat: no-repeat;">
 <!-- Navbar (sticky bottom) -->
 <div class="w3-bottom w3-hide-small">
   <div class="w3-bar w3-white w3-center w3-padding w3-opacity-min w3-hover-opacity-off">
-    <a href="home.html" style="width:25%" class="w3-bar-item w3-button w3-hover-1">Home</a>
+    <a href="home.html" style="width:25%" class="w3-round w3-button w3-hover-1">Home</a>
     <a href="#ohsnap" style="width:25%" class="w3-bar-item w3-button w3-hover-2">Things We ain't supposed to know!</a>
     <a href="#culture" style="width:25%" class="w3-bar-item w3-button w3-hover-3">"Issa" Culture</a>
     <a href="#media" style="width:25%" class="w3-bar-item w3-button w3-hover-4">Media</a>
@@ -101,12 +102,22 @@ background-repeat: no-repeat;">
   <div class="w3-content">
 
 
-    <img class="w3-round"  style="width:200%;margin:32px 0">
-    <p><i>Black is beautiful.</i>
+    <img class="w3-round"  style="width:200%;margin:25px 0">
+    <p><i>#Black is beautiful. </i>
     </p><br>
 
 
 
+
+</div>
+<div class="w3-sidebar w3-black w3-bar-block" style="width:9.5%">
+  <h3 class="w3-bar-item">Resources</h3> style = font-family''AnjelikaRose
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
+
+<div style="margin-left:10%">
 
 </div>
 </body>
