--- a/TheDiaspora.html
+++ b/TheDiaspora.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+<body>
+
+<script src="api.js"></script>
+
+</body>
+</html>
+
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
-body,h1,h2{font-family:Bitter',serif;}
+body,h1,h2{font-family:'Bitter', serif;}
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg, .bgimg2 {
@@ -18,7 +25,7 @@ p {line-height: 2}
 .bgimg2 {background-image:"html5.gif"}
 </style>
 <body>
-  #<img src="html5.gif" alt="HTML5 Icon" width="200" height="228">
+#<img src="html5.gif" alt="HTML5 Icon" width="200" height="228">
 
 <!-- Header / Home-->
 <header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
