--- a/caramel.html
+++ b/caramel.html
@@ -91,7 +91,7 @@ background-repeat: no-repeat;">
     <a href="#culture" style="width:25%" class="w3-bar-item w3-button w3-hover-3">"Issa" Culture</a>
     <a href="#media" style="width:25%" class="w3-bar-item w3-button w3-hover-4">Media</a>
     <a href="#thearts" style="width:25%" class="w3-bar-item w3-button w3-hover-5">The Arts</a>
-    <a href="#news" style="width:25%" class="w3-bar-item w3-button w3-hover-6">News</a>
+    <a href="home.html" style="width:25%" class="w3-bar-item w3-button w3-hover-6">News</a>
     <a href="#events" style="width:25%" class="w3-bar-item w3-button w3-hover-7">Events</a>
   </div>
 </div>
